--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,13 +1,28 @@
 /* Add a background color to the header element */
+header{
+    background-color: blueviolet;
 
+}
 /* Add a fun background color to the main element */
-
+background{ color: rosybrown;} 
 /* Align the h1 containing your name in the center of the header*/
-
+h1{
+    text-align:center ;
+}
 /* Make your p tag a different color and italic */
-
+p{
+    color: blueviolet;
+}
 /* Put a border around your image */
-
+img{
+border: 5px solid;
+}
 /* Change the font-family of your list */
 
 /* Add a background color to the footer element */
+footer{
+    background-color: rgb(226, 43, 165);
+}
+main {
+    background-color: rgb(43, 80, 226);
+}
